# proyectos-de-ejemplo

./: README.md  archivo.txt
c.vs.ruby/factorial/: factorial_ajdorta.c  factorial_iterativo.rb
charlas/: .gitignore  Gemfile  ideas.md
charlas/asker/: README.md
charlas/clean-code/: README.md  book.md  ideas.md  python.md
charlas/cruzroja/: dia1.md  dia2.md  main.text  section1.md  section2.md  section3.md
charlas/docker/: Dockerfile  howto.md
charlas/libreoffice/: .gitignore  install.sh  main.text  section1.md  to-html.rb
charlas/moodle/: 00-introduccion.md  01-entorno.md  02-calificador.md  02-tareas.md  03-calificador.md  03-tareas.md  04-calificador.md  05-calificador.md  05-escalas.md  06-ejemplos.md  06-preguntas.md  07-categorias.md  07-preguntas.md  08-preguntas.md  09-cuestionario.md  09-varios.md  10-importar.md  10-insignias.md  11-rubricas.md  12-formulas.md  13-encuestas.md  98-varios.md
charlas/rails/: 00-presentacion.md  01-instalar.md  01-rbenv-rails.md  01-ruby.md  README.md  (+17 more)
docs/: goodbye-oop.md
ejemplos.elixir/: 01-hello-puts.exs  02-hello-module.exs  03-hello-process.exs  README.md
examples/: README.md
examples/lang.rust/07.cli/09.cli/mygrep/: Cargo.toml
godot/: README.md
golang/: 02-values.go
goodbye-oop/: README.md  inherits.md
iloveruby/: .gitignore  IDEAS.md  README.md  factorial.rb
project.euler.net/: 02-euler.rb  02-problem.md
python.ejemplos/: dudas.txt
python.vs.ruby/: README.md
rosetta-code/: README.md
ruby.ejemplos/: .gitignore
sinatra.hello/: hello.rb
sofa.project/: README.md  plantilla.md  ruby.md
(+2000 files in other folders)
