[package]
name = "mygrep"
version = "0.1.0"
edition = "2021"
default-run = "mygrep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
